# swagger.json
@@ -60,6 +60,78 @@ GOOGLE_APPLICATION_CREDENTIALS not set or file not found
             },
             "parameters": []
         },
+        "/companies/departments/{id}/": {
+            "get": {
+                "operationId": "companies_departments_read",
+                "description": "기능 : 부서의 상세 정보를 조회/수정/삭제합니다.\n허용 : 회사 오너",
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                },
+                "tags": [
+                    "companies"
+                ]
+            },
+            "put": {
+                "operationId": "companies_departments_update",
+                "description": "기능 : 부서의 상세 정보를 조회/수정/삭제합니다.\n허용 : 회사 오너",
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                },
+                "tags": [
+                    "companies"
+                ]
+            },
+            "delete": {
+                "operationId": "companies_departments_delete",
+                "description": "기능 : 부서의 상세 정보를 조회/수정/삭제합니다.\n허용 : 회사 오너",
+                "parameters": [],
+                "responses": {
+                    "204": {
+                        "description": ""
+                    }
+                },
+                "tags": [
+                    "companies"
+                ]
+            },
+            "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "required": true,
+                    "type": "string"
+                }
+            ]
+        },
+        "/companies/{company_id}/departments/": {
+            "post": {
+                "operationId": "companies_departments_create",
+                "description": "기능 : 부서를 만들 수 있습니다.\n허용 : 회사 오너",
+                "parameters": [],
+                "responses": {
+                    "201": {
+                        "description": ""
+                    }
+                },
+                "tags": [
+                    "companies"
+                ]
+            },
+            "parameters": [
+                {
+                    "name": "company_id",
+                    "in": "path",
+                    "required": true,
+                    "type": "string"
+                }
+            ]
+        },
         "/companies/{company_id}/invite/": {
             "post": {
                 "operationId": "companies_invite_create",
